// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackupScreen renders backup options when none are completed 1`] = `
<View
  sentry-label="Screen"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "display": "flex",
        "flex": 1,
      },
      {
        "paddingTop": 200,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "marginBottom": undefined,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "center",
            "marginBottom": 12,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 12,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.2}
          style={
            [
              {
                "color": "#222222",
                "display": "flex",
                "fontFamily": "Basel-Book",
                "fontSize": 25,
                "fontWeight": "400",
                "lineHeight": 32,
                "paddingTop": 0,
                "textAlign": "center",
              },
            ]
          }
        >
          Choose a backup for your wallet
        </Text>
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "color": "#7D7D7D",
                "display": "flex",
                "fontFamily": "Basel-Book",
                "fontSize": 17,
                "lineHeight": 24,
                "textAlign": "center",
              },
            ]
          }
        >
          Remember, backups are your lifeline. They're your ticket back in if something goes wrong.
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "height": 16,
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        style={
          {
            "alignItems": "stretch",
            "flex": 1,
            "flexDirection": "column",
            "flexGrow": 1,
            "gap": 16,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          style={
            {
              "alignItems": "stretch",
              "flexDirection": "column",
              "flexGrow": 1,
              "gap": 16,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="add-cloud-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="16"
                    bbWidth="16"
                    color="#FC72FF"
                    fill="none"
                    focusable={false}
                    height={16}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    size={8}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    tintColor="#FC72FF"
                    vbHeight={24}
                    vbWidth={24}
                    width={16}
                  >
                    <RNSVGGroup
                      fill={null}
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M15.03 9.09003C15.35 9.03003 15.67 9 16 9C18.76 9 21 11.24 21 14C21 16.76 18.76 19 16 19H9.5C5.91 19 3 16.09 3 12.5C3 8.91 5.91 6 9.5 6C11.146 6 12.648 6.61297 13.792 7.62097C14.274 8.04597 14.692 8.54103 15.03 9.09003Z"
                        fill={
                          {
                            "payload": 4294734591,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Basel-Book",
                              "fontSize": 19,
                              "fontWeight": "400",
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with iCloud
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Basel-Book",
                            "fontSize": 17,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      Safe, simple, and all you need to save is your password.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="add-manual-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <svg
                    color="#FC72FF"
                    data-file-name="SvgPaperStack"
                    height={16}
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Basel-Book",
                              "fontSize": 19,
                              "fontWeight": "400",
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with recovery phrase
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Basel-Book",
                            "fontSize": 17,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      Top-notch security with no third parties. You're in control.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "center",
                  "display": "flex",
                  "opacity": 1,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 4,
                    "justifyContent": "center",
                  }
                }
              >
                <svg
                  color="#7D7D7D"
                  data-file-name="SvgInfoCircle"
                  height={24}
                  width={24}
                />
                <RCTText
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  isHighlighted={false}
                  selectionColor={null}
                  style={
                    {
                      "color": "#222222",
                      "display": "flex",
                      "fontFamily": "Basel-Medium",
                      "fontSize": 17,
                      "lineHeight": 24,
                    }
                  }
                >
                  Learn about wallet safety and recovery
                </RCTText>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              onBlur={[Function]}
              onFocus={[Function]}
              pointerEvents="none"
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#2222220D",
                  "borderBottomColor": "transparent",
                  "borderBottomLeftRadius": 16,
                  "borderBottomRightRadius": 16,
                  "borderBottomWidth": 1,
                  "borderLeftColor": "transparent",
                  "borderLeftWidth": 1,
                  "borderRightColor": "transparent",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "transparent",
                  "borderTopLeftRadius": 16,
                  "borderTopRightRadius": 16,
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "height": "auto",
                  "justifyContent": "center",
                  "paddingBottom": 12,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 12,
                }
              }
              userSelect="none"
            >
              <RCTText
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                isHighlighted={false}
                maxFontSizeMultiplier={1.2}
                selectionColor={null}
                style={
                  {
                    "color": "#CECECE",
                    "display": "flex",
                    "fontFamily": "Basel-Book",
                    "fontSize": 19,
                    "lineHeight": 24,
                  }
                }
              >
                Select backup to continue
              </RCTText>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`BackupScreen renders backup options when some are completed 1`] = `
<View
  sentry-label="Screen"
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "display": "flex",
        "flex": 1,
      },
      {
        "paddingTop": 200,
      },
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      [
        [
          {
            "flex": 1,
            "justifyContent": "flex-end",
          },
          {
            "marginBottom": undefined,
          },
        ],
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <View
      entering={BaseAnimationMock {}}
      exiting={BaseAnimationMock {}}
      sentry-label="Flex"
      style={
        [
          {
            "alignItems": "stretch",
            "display": "flex",
            "flexDirection": "column",
            "flexGrow": 1,
            "justifyContent": "flex-start",
            "paddingBottom": 16,
            "paddingHorizontal": 16,
          },
        ]
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        style={
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 12,
            "justifyContent": "center",
            "marginBottom": 12,
            "marginLeft": 12,
            "marginRight": 12,
            "marginTop": 12,
          }
        }
      >
        <Text
          allowFontScaling={false}
          maxFontSizeMultiplier={1.2}
          style={
            [
              {
                "color": "#222222",
                "display": "flex",
                "fontFamily": "Basel-Book",
                "fontSize": 25,
                "fontWeight": "400",
                "lineHeight": 32,
                "paddingTop": 0,
                "textAlign": "center",
              },
            ]
          }
        >
          Choose a backup for your wallet
        </Text>
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            [
              {
                "color": "#7D7D7D",
                "display": "flex",
                "fontFamily": "Basel-Book",
                "fontSize": 17,
                "lineHeight": 24,
                "textAlign": "center",
              },
            ]
          }
        >
          Remember, backups are your lifeline. They're your ticket back in if something goes wrong.
        </Text>
      </View>
      <View
        style={
          [
            {
              "display": "flex",
              "flexGrow": 0,
              "flexShrink": 0,
              "height": 16,
            },
          ]
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        style={
          {
            "alignItems": "stretch",
            "flex": 1,
            "flexDirection": "column",
            "flexGrow": 1,
            "gap": 16,
            "justifyContent": "space-between",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          style={
            {
              "alignItems": "stretch",
              "flexDirection": "column",
              "flexGrow": 1,
              "gap": 16,
              "justifyContent": "space-between",
            }
          }
        >
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 0.5,
                  "padding": 16,
                }
              }
              testID="add-cloud-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <RNSVGSvgView
                    align="xMidYMid"
                    bbHeight="16"
                    bbWidth="16"
                    color="#FC72FF"
                    fill="none"
                    focusable={false}
                    height={16}
                    meetOrSlice={0}
                    minX={0}
                    minY={0}
                    size={8}
                    style={
                      [
                        {
                          "backgroundColor": "transparent",
                          "borderWidth": 0,
                        },
                        {
                          "flex": 0,
                          "height": 16,
                          "width": 16,
                        },
                      ]
                    }
                    tintColor="#FC72FF"
                    vbHeight={24}
                    vbWidth={24}
                    width={16}
                  >
                    <RNSVGGroup
                      fill={null}
                      propList={
                        [
                          "fill",
                        ]
                      }
                    >
                      <RNSVGPath
                        d="M15.03 9.09003C15.35 9.03003 15.67 9 16 9C18.76 9 21 11.24 21 14C21 16.76 18.76 19 16 19H9.5C5.91 19 3 16.09 3 12.5C3 8.91 5.91 6 9.5 6C11.146 6 12.648 6.61297 13.792 7.62097C14.274 8.04597 14.692 8.54103 15.03 9.09003Z"
                        fill={
                          {
                            "payload": 4294734591,
                            "type": 0,
                          }
                        }
                        propList={
                          [
                            "fill",
                          ]
                        }
                      />
                    </RNSVGGroup>
                  </RNSVGSvgView>
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Basel-Book",
                              "fontSize": 19,
                              "fontWeight": "400",
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with iCloud
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Basel-Book",
                            "fontSize": 17,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      Safe, simple, and all you need to save is your password.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": false,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "backgroundColor": "#F9F9F9",
                  "borderColor": "#2222220D",
                  "borderRadius": 20,
                  "borderWidth": 1,
                  "display": "flex",
                  "opacity": 1,
                  "padding": 16,
                }
              }
              testID="add-manual-backup"
            >
              <View
                sentry-label="Flex"
                style={
                  [
                    {
                      "alignContent": "center",
                      "alignItems": "center",
                      "display": "flex",
                      "flexDirection": "row",
                      "justifyContent": "flex-start",
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "#FC72FF1f",
                        "borderRadius": 999999,
                        "display": "flex",
                        "height": 36,
                        "justifyContent": "center",
                        "padding": 16,
                        "width": 36,
                      },
                    ]
                  }
                >
                  <svg
                    color="#FC72FF"
                    data-file-name="SvgPaperStack"
                    height={16}
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "display": "flex",
                        "flexGrow": 0,
                        "flexShrink": 0,
                        "height": 16,
                        "width": 16,
                      },
                    ]
                  }
                />
                <View
                  sentry-label="Flex"
                  style={
                    [
                      {
                        "alignItems": "center",
                        "display": "flex",
                        "flexDirection": "row",
                        "justifyContent": "flex-start",
                        "paddingRight": 60,
                      },
                    ]
                  }
                >
                  <View
                    sentry-label="Flex"
                    style={
                      [
                        {
                          "alignItems": "flex-start",
                          "display": "flex",
                          "flex": 1,
                          "flexDirection": "column",
                          "justifyContent": "space-around",
                        },
                      ]
                    }
                  >
                    <View
                      sentry-label="Flex"
                      style={
                        [
                          {
                            "alignItems": "stretch",
                            "display": "flex",
                            "flexDirection": "row",
                            "justifyContent": "flex-start",
                          },
                        ]
                      }
                    >
                      <Text
                        allowFontScaling={false}
                        maxFontSizeMultiplier={1.4}
                        style={
                          [
                            {
                              "color": "#222222",
                              "display": "flex",
                              "fontFamily": "Basel-Book",
                              "fontSize": 19,
                              "fontWeight": "400",
                              "lineHeight": 24,
                            },
                          ]
                        }
                      >
                        Backup with recovery phrase
                      </Text>
                    </View>
                    <View
                      style={
                        [
                          {
                            "display": "flex",
                            "flexGrow": 0,
                            "flexShrink": 0,
                            "height": 4,
                          },
                        ]
                      }
                    />
                    <Text
                      allowFontScaling={false}
                      maxFontSizeMultiplier={1.4}
                      style={
                        [
                          {
                            "color": "#7D7D7D",
                            "display": "flex",
                            "fontFamily": "Basel-Book",
                            "fontSize": 17,
                            "lineHeight": 24,
                          },
                        ]
                      }
                    >
                      Top-notch security with no third parties. You're in control.
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            style={
              {
                "alignItems": "stretch",
                "flexDirection": "column",
                "gap": 12,
                "justifyContent": "flex-end",
              }
            }
          >
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={
                {
                  "bottom": 5,
                  "left": 5,
                  "right": 5,
                  "top": 5,
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignSelf": "center",
                  "display": "flex",
                  "opacity": 1,
                  "paddingVertical": 0,
                }
              }
            >
              <View
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 4,
                    "justifyContent": "center",
                  }
                }
              >
                <svg
                  color="#7D7D7D"
                  data-file-name="SvgInfoCircle"
                  height={24}
                  width={24}
                />
                <RCTText
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": undefined,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  isHighlighted={false}
                  selectionColor={null}
                  style={
                    {
                      "color": "#222222",
                      "display": "flex",
                      "fontFamily": "Basel-Medium",
                      "fontSize": 17,
                      "lineHeight": 24,
                    }
                  }
                >
                  Learn about wallet safety and recovery
                </RCTText>
              </View>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#FC72FF",
                  "borderBottomColor": "transparent",
                  "borderBottomLeftRadius": 16,
                  "borderBottomRightRadius": 16,
                  "borderBottomWidth": 1,
                  "borderLeftColor": "transparent",
                  "borderLeftWidth": 1,
                  "borderRightColor": "transparent",
                  "borderRightWidth": 1,
                  "borderStyle": "solid",
                  "borderTopColor": "transparent",
                  "borderTopLeftRadius": 16,
                  "borderTopRightRadius": 16,
                  "borderTopWidth": 1,
                  "flexDirection": "row",
                  "gap": 8,
                  "height": "auto",
                  "justifyContent": "center",
                  "paddingBottom": 12,
                  "paddingLeft": 12,
                  "paddingRight": 12,
                  "paddingTop": 12,
                }
              }
            >
              <RCTText
                accessibilityState={
                  {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": undefined,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                isHighlighted={false}
                maxFontSizeMultiplier={1.2}
                selectionColor={null}
                style={
                  {
                    "color": "#FFFFFF",
                    "display": "flex",
                    "fontFamily": "Basel-Book",
                    "fontSize": 19,
                    "lineHeight": 24,
                  }
                }
              >
                Continue
              </RCTText>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
